Fixed spelling and spacing

--- a/screen.css
+++ b/screen.css
@@ -78,6 +78,7 @@ h1{
     
 }
 h2{
+    padding-top: 40px;
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size:92pt;
